fixed flex container gaps in kits

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -212,9 +212,11 @@ input[type='submit'] {
 }
 
 .container {
+	align-items: stretch;
 	display: flex;
 	justify-content: space-around;
 	flex-wrap: wrap;
+	gap: 1rem;
 }
 
 .emphasized {
