--- a/src/css/pages/_Kits.scss
+++ b/src/css/pages/_Kits.scss
@@ -42,13 +42,15 @@
 
 	figure {
 		width: 80%;
+		height: 100%;
 		max-width: 400px;
 		padding: 20px;
+		// margin: 1rem;
 		border-radius: 16px;
 		backdrop-filter: blur(5px);
 		// border: 5px solid white;
 		background: rgba($color: $color-primary-dark, $alpha: 0.5);
-		margin: 10px;
+		margin: auto;
 
 		P {
 			text-align: center;
